# atompaw

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  VERSION  WorkingNotes.txt  bootstrap.sh  configure.ac  configure.ac~  wipeout.sh
config/: README.pouillon
config/examples/: configure.64intel  configure.64sointel  configure.ELabsoft  configure.ELabsoft.debug  configure.ELg95  configure.ELintel  configure.ELintel.debug  configure.absoft  configure.absoft.debug  configure.inc  configure.intel80  configure.intel80.debug
config/m4/: fortran.m4  fortran_c_bindings.m4  information.m4  libxc.m4  libxc_names.m4  linalg.m4  optimizations.m4  workarounds.m4
config/old/: convert-old-flags.py  graphatom.inc  make.Gfortran  make.intel111-debug
doc/: ATOMPAW_Explore_Userguide.odt  Atompaw4.2.0.0.tex  DiracEqns.bbl  DiracEqns.tex  atompaw-userguide.doc  atompaw-usersguide.doc  atompaw.README.MacOSX
doc/exploresetup/: ParameterExplore.cpp  ParameterExploreReadMe.txt
doc/scripts/: explorelogderiv  explorewfn  plotdensity  plotlogderiv  plotpotential  plotwfn
example/Au/dirac/: Au  Au.input  dummy  out  potAE0  potSC1  wfnAE0  wfnSC1
example/F/hf/: F.input  OCCWFN  cfxSC1  checkvxc  cwfnSC1  denAE0  denSC1  density  dummy  fxAE0  out  rvf  tp  tprod.3  vfxSC1  vloc  vwfnSC1
example/F/lda/: F  F.LDA-PW-paw.UPF  F.LDA-PW-paw.abinit  F.LDA-PW-paw.xml  F.atomicdata  F.input  NC  OCCWFN  compare.abinit  density  dummy  logderiv.0  logderiv.1  logderiv.2  out  potAE0  potSC1  potential  rVx  rvf  tprod.1  tprod.3  vloc  wfn001  wfn002  wfn003  wfn004  wfn1  wfn2  wfn3  wfn5  wfn6  wfn7  wfnAE0
example/Li/hf/: Li.input  NC  hattest  out  tprod.2  wfn1  wfn2
example/Li/hf_bessel/: NC  density  hattest  potSC1  potential  rvf  tp  vfxSC1  vloc  vwfnSC1  wfn2  wfn3
example/Li/lda/: Li  Li.LDA-PW-paw.UPF  Li.LDA-PW-paw.abinit  Li.LDA-PW-paw.xml  Li.atomicdata  Li.input  NC  OCCWFN  compare.abinit  density  dummy  logderiv.1  logderiv.2  out  potAE0  potSC1  potential  rVx  rvf  tprod.1  tprod.2  vloc  wfn001  wfn002  wfn003  wfn1  wfn2  wfn3  wfn4  wfn5  wfn6  wfnAE0
example/Na/explore/: 1.logderiv.0  1.logderiv.1  1.wfn002  1.wfn3  1.wfn4  2.logderiv.0  2.logderiv.1  2.logderiv.2  2.wfn001  2.wfn002  2.wfn003  2.wfn3  EXPLORERESULTS  EXPLORESUMMARY  EXPLOREout.1  EXPLOREout.2  Na  OCCWFN  compare.abinit  density  dummy  in  out  potAE0  rVx  rvf  tprod.1  tprod.2  tprod.3  vloc  wfn001  wfn003  wfn1  wfn2  wfn5  wfn6  wfn7  wfnAE0
example/Na/outputdata/: Na  Na.LDA-PW-paw.UPF  Na.LDA-PW-paw.abinit  Na.LDA-PW-paw.xml  Na.atomicdata  compare.abinit  density  dummy  in  out  potSC1  potential  rvf  tprod.1  tprod.2  tprod.3  vloc  wfn003  wfn1  wfn2  wfn3  wfn5  wfn6  wfnSC1
examples/F/hf/: F  F.atomicdata  NC  hattest  potSC1  potential  tprod.1  wfn1  wfn2  wfn3  wfn4  wfnAE0
examples/F/lda/: F  F.LDA-PW-paw.UPF  F.LDA-PW-paw.abinit  F.atomicdata  F.input  density  dummy  out  potential  rVx  rvf  wfn1  wfn4  wfn7  wfnSC1
examples/Li/hf/: Li  Li.atomicdata  checkvxc  denSC1  dummy  potential  rvf  tp  tprod.1  vloc  wfn3
examples/Li/hf_bessel/: Li  Li.atomicdata  Li.input  OCCWFN  checkvxc  denAE0  dummy  out  tprod.1  tprod.2  wfn1
examples/Li/lda/: Li.LDA-PW-paw.UPF  Li.LDA-PW-paw.abinit  OCCWFN  logderiv.0  out  potAE0  potSC1  potential  rVx  tprod.1  tprod.2  vloc  wfnSC1
examples/Na/explore/: 1.logderiv.1  1.wfn2  1.wfn4  2.wfn002  2.wfn1  2.wfn2  EXPLOREIN.1  EXPLOREIN.2  EXPLORERESULTS  EXPLOREout.2  NC  density  in  logderiv.0  out  potAE0  rvf  tprod.2  tprod.3  wfn001  wfn003  wfn004  wfn6  wfn7  wfnSC1
examples/Na/outputdata/: density  dummy  in~  logderiv.1  potential  rVx  tprod.1  tprod.2  tprod.3  vloc  wfn004  wfn4
legacycode/: LegacyMakefile.am  README  abinitinterface.F90  anderson_driver.F90  atompaw_lib.F90  atompaw_report.F90  blockdavidson_mod.F90  examplecompile  excor.F90  exec_recompile  fock.F90  general_mod.F90  globalmath.F90  graphatom_report.F90  hf_pseudo.F90  input_dataset_mod.F90  interpolation_mod.F90  io_tools.F90  ldagga_mod.F90  libxc_mod.F90  libxc_tools.c  paw_sub.F90  pkginfo.f90.in  report_mod.F90  search_sort.F90  tools_mod.F90
src/: Makefile  Makefile.am  Makefile.bad  Makefile.graphatom  README  abinitinterface.F90  abinitinterface.f90  aeatom.F90  aeatom.f90  aeonly_report.F90  anderson_driver.F90  anderson_driver.f90  atomdata.F90  atomdata.f90  atompaw.f90  atompaw_aeonly.F90  atompaw_lib.f90  atompaw_prog.F90  atompaw_prog.f90  atompaw_report.F90  atompaw_report.f90  blockdavidson_mod.F90  blockdavidson_mod.f90  compiledfile_make.inc  compiledfiles_recompile  excor.F90  excor.f90  exx_mod.F90  exx_mod.f90  exx_mod_old.F90  exx_mod_old.f90  exx_pseudo.F90  exx_pseudo.f90  exxdata.F90  exxdata.f90  fock.F90  fock.f90  general_mod.F90  general_mod.f90  globalmath.F90  (+54 more)
